[tool.poetry]
name = "bqml-tutorial"
version = "0.1.0"
description = "bqml-tutorial"
authors = ["Naoto Shimakoshi"]

[tool.poetry.dependencies]
python = "^3.7.7"
google-api-python-client = "^1.8.3"
google-cloud-bigquery = "^1.24.0"
google-cloud-storage = "^1.28.1"
matplotlib = "^3.2.1"
pandas-gbq = "^0.13.2"
scikit-learn = "^0.23.1"
tensorflow = "^2.2.0"
tqdm = "^4.46.0"
google-cloud-monitoring = "^0.36.0"
google-cloud-bigquery-storage = "^0.8.0"
numpy = "^1.18.4"
fire = "^0.3.1"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
invoke = "^1.4.1"
flake8 = "^3.8.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
